# proxelar

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml  install_cer.sh  mod.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ui.md
.github/workflows/: autofix.yml  changelog.yml  deny.yml  docs.yml  release.yml  rust.yml
certs/: Cargo.toml
certs/certs/: cert.pem
certs/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  ca-certificate.md  cli-reference.md  installation.md  intercept.md  interfaces.md  introduction.md  quick-start.md  robots.txt  sitemap.xml
docs/src/guides/: browser-curl.md  ca-trust.md  lua-recipes.md  reverse-proxy-mocking.md
docs/src/proxy-modes/: forward.md  reverse.md
docs/src/reference/: comparison.md  limitations.md
docs/src/scripting/: api-reference.md  examples.md  overview.md
docs/theme/: head.hbs
examples/scripts/: add_header.lua  auth_inject.lua  block_domain.lua  filter_by_method.lua  inject_cors.lua  log_traffic.lua  mock_api.lua  modify_json_response.lua  redirect.lua  request_body_modify.lua  rewrite_html.lua  strip_cookies.lua
hudsucker_ex/: Cargo.toml
hudsucker_ex/src/: main.rs
mitm_proxy/: Cargo.toml  mitmproxy.key
mitm_proxy-/: Cargo.toml
mitm_proxy-/src/: main.rs  mitm_proxy.rs
mitm_proxy/src/: main.rs  managed_proxy.rs  mitm_proxy.rs  requests.rs
mitm_proxy/src/models/: mod.rs  opts.rs
proxelar-cli/: Cargo.toml  build.rs
proxelar-cli/src/: cli.rs  main.rs
proxelar-cli/src/interface/: mod.rs  terminal.rs
proxelar-cli/src/interface/tui/: event.rs  handler.rs  mod.rs  state.rs  ui.rs
proxelar-cli/src/interface/web/: mod.rs
proxelar-cli/src/interface/web/assets/: app.js  index.html  style.css
proxyapi/: Cargo.toml
proxyapi/examples/: ssl.rs
proxyapi/src/: .proxy_handler.rs.swp  body.rs  encoding.rs  error.rs  event.rs  handler.rs  intercept.rs  lib.rs  main.rs  output.rs  proxy_handler.rs  rewind.rs  scripting.rs
proxyapi/src/ca/: cert_server.rs  hudsucker.cer  hudsucker.key  mitmproxy.cer  mitmproxy.key  mod.rs
proxyapi/src/models/: mitm_ssl_config.rs  mod.rs
proxyapi/src/proxy/: builder.rs  forward.rs  internal.rs  mod.rs  reverse.rs  tls.rs
proxyapi/tests/: cert_authority.rs  cert_server.rs  forward_proxy.rs  reverse_proxy.rs
proxyapi_models/: Cargo.toml
proxyapi_models/src/: lib.rs
proxyapi_models/tests/: serialization.rs
proxytls/: Cargo.toml  rooCA.key  rootCA.pem  rootCA.srl  server.crt  server.csr  server.csr.cnf  server.key
proxytls/src/: main.rs  request_handler.rs  tunnel.rs
src/: app.rs  lib.rs  main.rs
tauri-ui/: CONTRIBUTING.md  Cargo.toml  index.html  styles.css
tauri-ui/src/: api.rs  app.rs  main.rs
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/icons/: icon.icns
tauri-ui/src-tauri/src/: main.rs  managed_proxy.rs  proxy.rs
tauri-ui/src/components/: app.rs  input.rs  mod.rs  proxy_off.rs  proxy_on.rs  request.rs  test.rs  theme_button.rs  title_bar.rs
tauri-ui/src/components/request/: details.rs  header.rs  mod.rs  request_tab.rs  response_tab.rs  row.rs  tab_view.rs
