[package]
name = "hudsucker_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = {version = "0.19.0", features = ["full"]}
tokio = {version = "1.25.0", features = ["full"]}
tracing = "0.1.37"
