[package]
name = "proxelar"
version = "0.4.0"
edition = "2021"
rust-version.workspace = true
authors = ["Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
description = "MITM proxy for HTTP/HTTPS traffic"
license = "MIT"
repository = "https://github.com/emanuele-em/proxelar"

[features]
default = ["scripting"]
scripting = ["proxyapi/scripting"]

[dependencies]
proxyapi = { version = "0.4.0", path = "../proxyapi" }
bytes = "1.9"
http = "1.2"
proxyapi_models = { version = "0.4.0", path = "../proxyapi_models" }
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net"] }
tokio-util = "0.7"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
open = "5"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"

# Web GUI
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"

[dev-dependencies]
serde_json = "1.0"
