[package]
name = "proxyapi"
version = "0.1.0"
edition = "2021"

[[example]]
name = "ssl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
bstr = "1.2.0"
bytes = "1.4.0"
chrono = "0.4.23"
http = "0.2.8"
hyper = {version="0.14.23", features=["full"]}
hyper-rustls = {version = "0.23.2",  features = ["http1", "logging", "tls12", "webpki-tokio"]}
hyper-tungstenite = "0.9.0"
moka = {version="0.9.6", features= ["future"]}
openssl = {version = "0.10.45", features = ["vendored"]}
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["full"]}
tokio-rustls = "0.23.4"
tokio-tungstenite = {version = "0.18.0", features =["rustls-tls-webpki-roots"]}
proxyapi_models = {path = "../proxyapi_models"}
