[package]
name = "proxyapi"
version = "0.4.3"
edition = "2021"
rust-version.workspace = true
authors = ["Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
description = "Core library for the Proxelar MITM proxy"
license = "MIT"
repository = "https://github.com/emanuele-em/proxelar"
homepage = "https://proxelar.micheletti.io"
documentation = "https://docs.rs/proxyapi"
readme = "../README.md"
categories = ["development-tools", "network-programming", "web-programming::http-server"]
keywords = ["proxy", "mitm", "http", "https", "lua"]

[features]
default = []
scripting = ["mlua"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"], optional = true }
hyper = { version = "1.9", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1.11"
hyper-rustls = { version = "0.27", features = ["http1", "logging", "tls12", "ring", "webpki-tokio"] }
openssl = { version = "0.10.78", features = ["vendored"] }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.51", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
async-trait = "0.1"
bstr = "1.11"
chrono = "0.4"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.26", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
proxyapi_models = { version = "0.4.3", path = "../proxyapi_models" }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
