[package]
name = "proxyapi"
version = "0.4.6"
edition = "2021"
rust-version.workspace = true
authors = ["Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
description = "Core library for the Proxelar MITM proxy"
license = "MIT"
repository = "https://github.com/emanuele-em/proxelar"
homepage = "https://proxelar.micheletti.io"
documentation = "https://docs.rs/proxyapi"
readme = "../README.md"
categories = ["development-tools", "network-programming", "web-programming::http-server"]
keywords = ["proxy", "mitm", "http", "https", "lua"]

[features]
default = []
scripting = ["dep:mlua", "dep:flate2", "dep:brotli"]
# Statically link a vendored Lua 5.4. Disable (build the binary with
# --no-default-features) to link a shared system Lua instead, which is required
# to load native C modules on Windows.
vendored-lua = ["mlua?/vendored"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "send"], optional = true }
# Body (de)compression for the Lua scripting hooks (gzip/deflate + brotli).
# Note: Cargo.lock pins alloc-stdlib to 0.2.2; 0.2.3 pulls alloc-no-stdlib 3.0
# alongside brotli's 2.0.4 and fails to compile. Re-pin after `cargo update`:
#   cargo update -p alloc-stdlib --precise 0.2.2
flate2 = { version = "1.1", optional = true }
brotli = { version = "8", optional = true }
hyper = { version = "1.10", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1", "http2"] }
http = "1.4"
http-body-util = "0.1"
bytes = "1.9"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1.14"
hyper-rustls = { version = "0.27", features = ["http1", "logging", "tls12", "ring", "webpki-tokio"] }
webpki-roots = "1.0"
openssl = { version = "0.10.80", features = ["vendored"] }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1.52", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
async-trait = "0.1"
bstr = "1.11"
chrono = "0.4"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.29", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
proxyapi_models = { version = "0.4.6", path = "../proxyapi_models" }

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
