[package]
name = "proxyapi_models"
version = "0.4.3"
edition = "2021"
rust-version.workspace = true
authors = ["Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
description = "Data models for the Proxelar MITM proxy"
license = "MIT"
repository = "https://github.com/emanuele-em/proxelar"
homepage = "https://proxelar.micheletti.io"
documentation = "https://docs.rs/proxyapi_models"
readme = "../README.md"
categories = ["data-structures", "network-programming", "web-programming::http-server"]
keywords = ["proxy", "http", "models", "serde", "traffic"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.9", features = ["serde"] }
http-serde = "2.1"
http = "1.2"

[dev-dependencies]
serde_json = "1.0"
