[package]
name = "proxytls"
version = "0.1.0"
edition = "2021"
default-run = "proxytls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"
http-body = "0.4.5"
chrono = "0.4.23"
hyper-rustls = "0.23.2"
tokio-rustls = "0.23.4"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
x509 = "0.2.0"
webpki-roots = "0.22.6"
tokio-native-tls = "0.3.0"
rcgen = "0.10.0"
