[package]
name = "tauri-ui-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
gloo-utils = { version = "0.1", features = ["serde"]}
gloo-timers = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
proxyapi_models = {path = "../proxyapi_models"}

# machete identifies js-sys as non required package
[package.metadata.cargo-machete]
ignored = ["js-sys"]
