[package]
name = "tauri-ui-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_use_style"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
gloo-utils = { version = "0.1", features = ["serde"]}
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["MediaQueryList", "Window", "HtmlSelectElement", "HtmlOptionElement"] }
proxyapi_models = {path = "../proxyapi_models"}
http = "0.2"
url = "2.3.1"